--- a/src/templates/01 - HTML Templates/raphael-freire-institucional.html
+++ b/src/templates/01 - HTML Templates/raphael-freire-institucional.html
@@ -6,16 +6,16 @@
 
     <vtex.cmc:seoHead />
     <vtex:metaTags />
-    <vtex:template id="{{loja}}-styles" />
+    <vtex:template id="raphael-freire-styles" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 
 <body class="institucional">
 
-    <!-- Chamada do cabeçalho da {{loja}} -->
+    <!-- Chamada do cabeçalho da raphael-freire -->
 
-    <vtex:template id="{{loja}}-header" />
+    <vtex:template id="raphael-freire-header" />
 
     <main class="institucional-full">
 
@@ -23,7 +23,7 @@
             <div class="breadcrumb">
                 <ul class="breadcrumb__list">
                     <li class="breadcrumb__item">
-                        <a class="breadcrumb__link" title="{{loja}}" href="/">Home</a>
+                        <a class="breadcrumb__link" title="raphael-freire" href="/">Home</a>
                     </li>
                     <li class="breadcrumb__item--last">
                         <vtex:contentPlaceHolder id="breadcrumb" />
@@ -48,11 +48,11 @@
 
     <!-- Chamada para o rodapé -->
 
-    <vtex:template id="{{loja}}-footer" />
+    <vtex:template id="raphael-freire-footer" />
 
-    <!-- Chamada para os scripts Js da {{loja}} -->
+    <!-- Chamada para os scripts Js da raphael-freire -->
 
-    <vtex:template id="{{loja}}-scripts" />
+    <vtex:template id="raphael-freire-scripts" />
 
 </body>
 
