--- a/src/templates/01 - HTML Templates/raphael-freire-login.html
+++ b/src/templates/01 - HTML Templates/raphael-freire-login.html
@@ -5,16 +5,16 @@
 <head>
     <vtex.cmc:seoHead />
     <vtex:metaTags />
-    <vtex:template id="{{loja}}-styles" />
+    <vtex:template id="raphael-freire-styles" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 </head>
 
 <body>
 
-    <!-- Chamada do cabeçalho da {{loja}} -->
+    <!-- Chamada do cabeçalho da raphael-freire -->
 
-    <vtex:template id="{{loja}}-header" />
+    <vtex:template id="raphael-freire-header" />
 
     <main>
 
@@ -26,11 +26,11 @@
 
     <!-- Chamada para o rodapé -->
 
-    <vtex:template id="{{loja}}-footer" />
+    <vtex:template id="raphael-freire-footer" />
 
-    <!-- Chamada para os scripts Js da {{loja}} -->
+    <!-- Chamada para os scripts Js da raphael-freire -->
 
-    <vtex:template id="{{loja}}-scripts" />
+    <vtex:template id="raphael-freire-scripts" />
 
 </body>
 
