--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -1,3 +1,174 @@
 header {
-  background-color: pink;
+  background-color: $cinza-claro-ligth;
+
+  .header__top {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    justify-content: space-between;
+
+    background-color: $branco;
+    border-bottom: 1px solid $cinza-claro;
+    height: 50px;
+
+    max-width: 1800px;
+    margin: 0 auto;
+
+    padding-left: 100px;
+    padding-right: 100px;
+
+    font-size: 14px;
+
+    .contact__list {
+      display: flex;
+
+      .list__item:first-child {
+        margin-right: 40px;
+      }
+
+      .list__item > a {
+        font-weight: bold;
+        color: $verde;
+      }
+    }
+
+    .my__requests {
+      > b {
+        color: $verde;
+      }
+
+      .fa-bars {
+        margin-right: 10px;
+      }
+    }
+
+    // Breakpoints
+    @include media-max($xl) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+
+  .header__center {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    background-color: $branco;
+    max-width: 1800px;
+    margin: 0 auto;
+
+    padding-left: 100px;
+    padding-right: 100px;
+
+    height: 120px;
+
+    .center__logo {
+      width: 290px;
+      height: auto;
+    }
+
+    .center__form {
+      position: relative;
+      width: 100%;
+      max-width: 900px;
+
+      .form__input {
+        width: 100%;
+        height: 65px;
+        padding-left: 15px;
+        border: 1px solid $cinza-claro;
+        border-radius: 5px;
+      }
+
+      .form__button {
+        position: absolute;
+        top: 15px;
+        right: 15px;
+
+        width: 30px;
+        height: 30px;
+
+        background-color: unset;
+        border: unset;
+      }
+
+      // Breakpoints
+      @include media-max($xl) {
+        width: 500px;
+      }
+    }
+
+    .center__login {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      .login__icon {
+        width: 20px;
+        height: 20px;
+        margin-right: 10px;
+        filter: invert(49%) sepia(100%) saturate(3543%) hue-rotate(104deg)
+          brightness(103%) contrast(103%);
+      }
+    }
+
+    .center__cart {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      padding: 15px;
+      border: 1px solid $cinza-claro;
+
+      .cart__icon {
+        width: 25px;
+        height: 25px;
+        margin-right: 10px;
+        filter: invert(49%) sepia(100%) saturate(3543%) hue-rotate(104deg)
+          brightness(103%) contrast(103%);
+      }
+    }
+
+    // Breakpoints
+    @include media-max($xl) {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+  }
+
+  .header__footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    max-width: 1800px;
+    margin: 0 auto;
+
+    height: 70px;
+    background-color: $cinza-claro;
+
+    .footer__list {
+      display: flex;
+      height: 100%;
+
+      .list__item {
+        padding-left: 40px;
+        padding-right: 40px;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        height: inherit;
+
+        border-right: 1px solid $cinza-medio;
+
+        &:hover {
+          background-color: $cinza-medio;
+          opacity: 0.5;
+        }
+      }
+    }
+  }
 }
