--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -163,6 +163,7 @@ header {
         height: inherit;
 
         border-right: 1px solid $cinza-medio;
+        text-transform: uppercase;
 
         &:hover {
           background-color: $cinza-medio;
