--- a/src/styles/base/variables.scss
+++ b/src/styles/base/variables.scss
@@ -1,8 +1,8 @@
 // Exemplo
 
-$cinza-claro: #F2F2F2;
+$cinza-claro: #F7F7F7;
 $cinza-claro-ligth: #F9F9F9;
-$cinza-medio: #D0D0D0;
+$cinza-medio: #d9d9d9;
 $verde: #00B916;
 
 
