--- a/src/templates/01 - HTML Templates/Sub Templates/raphael-freire-header.html
+++ b/src/templates/01 - HTML Templates/Sub Templates/raphael-freire-header.html
@@ -21,30 +21,25 @@
         <form class="center__form" action="#">
             <input class="form__input" type="text" placeholder="Digite Aqui" name="search" />
             <button class="form__button" type="submit">
-                <img class="button__icon" src="/arquivos/raphael-freire-lupa-busca.svg" alt="Icone Login" />
+                <vtex.cmc:RaphaelFreireSvgLupa />
             </button>
         </form>
 
         <div class="center__login">
-            <img class="login__icon" src="/arquivos/raphael-freire-login-cadastre-se.svg" alt="Icone Login" />
+            <vtex.cmc:RaphaelFreireSvgCadastre />
             <span class="login__text">Login/Cadastre-se</span>
         </div>
 
         <div class="center__cart">
-            <img class="cart__icon" src="/arquivos/raphael-freire-icon-carrinho.svg" alt="Icone Carrinho de Compra" />
+            <vtex.cmc:RaphaelFreireSvgCarrinho />
             <span class="cart__text">1 item(S)</span>
         </div>
 
     </article>
 
-    <nav class="header__footer">
-        <ul class="footer__list">
-            <li class="list__item">Test Category</li>
-            <li class="list__item">Desenvolvimento</li>
-            <li class="list__item">Implatação</li>
-            <li class="list__item">Design</li>
-            <li class="list__item">Marketing</li>
-            <li class="list__item">Suporte</li>
+    <nav class="header__nav">
+        <ul class="nav__list">
+        
         </ul>
     </nav>
 
