Footer finalizado o layout Desktop

--- a/src/templates/01 - HTML Templates/Sub Templates/raphael-freire-footer.html
+++ b/src/templates/01 - HTML Templates/Sub Templates/raphael-freire-footer.html
@@ -21,157 +21,183 @@
     </section>
 </article>
 
+
+
 <footer>
+    <div class="footer__container">
 
-    <!-- Estrutura footer -->
-    <article class="footer-default container-center">
-        <div class="footer-container">
-            <section class="footer-atendimento">
-                <h3 class="footer-atendimento__title"> Central de atendimento </h3>
-                <ul class="footer-atendimento__list">
-                    <li class="footer-atendimento__list-item"> Grande São Paulo </li>
-                    <li class="footer-atendimento__list-item"> Telefone </li>
-                    <li class="footer-atendimento__list-item"> Empresa </li>
-                    <li class="footer-atendimento__list-item"> Horário de atendimento das 08h00 às 18h00
-                        <br /> Segunda a sexta-feira</li>
-                </ul>
+        <article class="container__top">
+            <section class="wrapper__footer__info">
+                <h3 class="footer__info__title">Lorem Ipsum is simply dummy</h3>
+
+                <h4 class="footer__info__subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting
+                    industry.</h4>
+
+                <p class="footer__info__text">
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
+                    industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type
+                    and
+                    scrambled it to make a type specimen book.
+                </p>
+            </section>
+        </article>
+
+        <article class="container__middle">
+
+            <section class="wrapper__footer__logo">
+
+                <img class="footer__logo__image" src="/arquivos/raphael-freire-logo-eplus.svg" alt="Logo Code Plus" />
+
+                <p class="footer__logo__text">
+                    Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown
+                </p>
+
             </section>
 
-            <section class="footer-links">
-                <nav class="footer-links__nav">
-                    <h3 class="footer-links__title">Institucional</h3>
-                    <ul class="footer-links__list">
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/quem-somos">/Quem Somos</a>
+            <section class="wrapper__footer__links">
+
+                <article class="footer__information">
+                    <p>
+                        Razão Social: Agência e-Plus Ltda | CNPJ: 18.106.304/0001-01 | 
+                        Endereço: Borges Lagoa, 564, 13 andar | CEP: 04038-000 | Vila Mariana - São Paulo
+                    </p>
+
+                    <p>
+                        Horário de Atendimento da Loja: 9h00 as 18h.
+                    </p>
+                </article>
+
+                <article class="footer__institutional">
+                    <h3 class="footer__institutional__title">e-Plus</h3>
+
+                    <ul class="footer__institutional__list">
+                        <li class="institutional__list__item">
+                            <a class="institutional__item__link" href="#"><i class="fa fa-angle-right"></i>Quem Somos</a>
                         </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/politica-de-privacidade">/Política de
-                                Privacidade</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/nossas-lojas">/Nossas Lojas</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/termos-de-uso">/Termos de Uso</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/login">/Fazer Login</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/account">/Minha Conta</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/account/orders">/Meus Pedidos</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/checkout">/Meu Carrinho</a>
+                        <li class="institutional__list__item">
+                            <a class="institutional__item__link" href="#"><i class="fas fa-angle-right"></i>Política de Privacidade</a>
                         </li>
                     </ul>
-                </nav>
-            </section>
 
-            <section class="footer-links">
-                <nav class="footer-links__nav">
-                    <h3 class="footer-links__title">Dúvidas</h3>
-                    <ul class="footer-links__list">
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/central-atendimento">/Central de
-                                Atendimento</a>
+                    <section class="footer__socialmedia">
+                        <h3 class="footer__socialmedia__title">Junte-se à Nós</h3>
+
+                        <div class="footer__socialmedia__icons">
+                            <a class="footer__instagram__link" href="#">
+                                <vtex.cmc:RaphaelFreireSvgInstagram />
+                            </a>
+                            <a class="footer__facebook__link" href="#">
+                                <vtex.cmc:RaphaelFreireSvgFacebook />
+                            </a>
+                            <a class="footer__youtube__link" href="#">
+                                <vtex.cmc:RaphaelFreireSvgYouTube />
+                            </a>
+                        </div>
+                    </section>
+                </article>
+
+                <article class="footer__question">
+                    <h3 class="footer__question__title">Dúvidas</h3>
+                    <ul class="footer__question__list">
+                        <li class="question__list__item">
+                            <a class="question__item__link" href="#"><i class="fas fa-angle-right"></i>Minha Conta</a>
                         </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/trocas-devolucoes">/Trocas e
-                                Devoluções</a>
+                        <li class="question__list__item">
+                            <a class="question__item__link" href="#"><i class="fas fa-angle-right"></i>Meus Pedidos</a>
                         </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/direito-arrependimento">/Direito de
-                                Arrependimento</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/parceiros">/Parceiros</a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="/institucional/politica-de-entrega">/Política de
-                                Entrega</a>
+                        <li class="question__list__item">
+                            <a class="question__item__link" href="#"><i class="fas fa-angle-right"></i>Fale Conosco</a>
                         </li>
                     </ul>
-                </nav>
-            </section>
+                </article>
 
-            <section class="footer-links">
-                <div class="footer-links__nav">
-                    <h3 class="footer-links__title">Acompnhe nas
-                        <b>redes sociais</b>
-                    </h3>
-                    <ul>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="#" target="_blank"> </a>
+                <article class="footer__security">
+                    <h3 class="footer__security__title">Segurança</h3>
+                    <ul class="footer__security__list">
+                        <li class="security__list__item">
+                            <a class="security__item__link" href="https://letsencrypt.org/">
+                                <img src="/arquivos/raphael-freire-pci.png" alt="Logo PCI Let's Encrypt" />
+                            </a>
                         </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="#" target="_blank"> </a>
+                        <li class="security__list__item">
+                            <a class="security__item__link" href="https://letsencrypt.org/">
+                                <vtex.cmc:RaphaelFreireSvgLets />
+                            </a>
                         </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="#" target="_blank"> </a>
-                        </li>
-                        <li class="footer-links__list-item">
-                            <a class="footer-links__link" href="#" target="_blank"> </a>
-                        </li>
+                        
                     </ul>
-                </div>
-            </section>
-        </div>
+                </article>
 
-        <div class="footer-container">
-            <section class="footer-links">
-                <h3 class="footer-links__title">Formas de pagamento</h3>
-                <ul class="footer-links__list">
-                    <li class="footer-links__list-item"></li>
-                </ul>
             </section>
 
-            <section class="footer-seguranca">
-                <h3 class="footer-links__title"> Segurança </h3>
-                <ul class="footer-links__list">
-                    <li class="footer-links__list-item">
-                        <a href="https://letsencrypt.org/">
-                            <vtex.cmc:raphael-freireLetsicon />
+            <section class="wrapper__footer__copyright__and__payment">
+                <h3 class="footer__copyright__title">Todos os direitos reservados. Loja de Testes. As informações não
+                    podem ser reproduzidas total ou parcialmente sem autorização prévia.</h3>
+
+
+                <ul class="footer__payment__list">
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-visa.png" alt="Logo Cartão Visa" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-card.png" alt="Logo Cartão MasterCard" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-dinners.png" alt="Logo Cartão Dinners" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-aura.png" alt="Logo Cartão Aura" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-hipercard.png" alt="Logo Cartão Hipercard" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-american.png" alt="Logo Cartão American" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-elo.png" alt="Logo Cartão Elo" />
+                        </a>
+                    </li>
+                    <li class="payment__list__item">
+                        <a class="payment__item__link" href="#">
+                            <img src="/arquivos/raphael-freire-boleto.png" alt="Simbolo Representa Boleto" />
                         </a>
                     </li>
                 </ul>
             </section>
-        </div>
-    </article>
 
-    <article class="footer-copyright container-center">
-        <section class="footer-copyright__copyright">
-            <p class="footer-copyright__text">
-                Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            </p>
-        </section>
+        </article>
 
-        <section class="footer-copyright__logos">
-            <div class="footer-copyright__logo-eplus">
-                <a class="footer-copyright__link" href="https://www.agenciaeplus.com.br/">
-                    <vtex.cmc:epEplusiicon />
-                </a>
-            </div>
-            <div class="footer-copyright__logo-vtex">
-                <a class="footer-copyright__link" href="https://www.vtex.com/pt-br/">
-                    <vtex.cmc:epVtexicon />
-                </a>
-            </div>
-        </section>
-    </article>
+        <article class="container__bottom">
 
-    <article class="footer-info">
-        <p class="footer-info__text">
-            Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum
-        </p>
-    </article>
+            <section class="footer__copyright__logos">
 
+                <div class="footer__copyright__logo__eplus">
+                    <a class="footer__copyright__link" href="https://www.agenciaeplus.com.br/">
+                        <vtex.cmc:RaphaelFreireSvgAgenciaEplus />
+                    </a>
+                </div>
 
+                <div class="footer__copyright__logo__vtex">
+                    <a class="footer__copyright__link" href="https://www.vtex.com/pt-br/">
+                        <vtex.cmc:RaphaelFreireSvgVtex />
+                    </a>
+                </div>
+            </section>
+        </article>
+
+    </div>
 </footer>
