--- a/src/styles/base/font.scss
+++ b/src/styles/base/font.scss
@@ -1,5 +1,5 @@
 //fonte padrão apenas para não dar erros na inicialização do Sass
-@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 
 @font-face {
     font-family: 'icomoon';
