--- a/src/styles/loja-style.scss
+++ b/src/styles/loja-style.scss
@@ -7,6 +7,7 @@
 @import 'modules/breadCrumb.scss';
 @import 'modules/buscaAvancada.scss';
 @import 'modules/prateleira.scss';
+@import 'modules/minicart.scss';
 
 @import 'layout/footer.scss';
 @import 'layout/header.scss';
